; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ws2_32/extr_sock.c_check_so_opentype.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ws2_32/extr_sock.c_check_so_opentype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INVALID_SOCKET = common dso_local global i32 0, align 4
@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_OPENTYPE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [59 x i8] c"check_so_opentype: wrong startup value of SO_OPENTYPE: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @check_so_opentype to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_so_opentype() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 1, i32* %1, align 4
  store i32 4, i32* %2, align 4
  %3 = load i32, i32* @INVALID_SOCKET, align 4
  %4 = load i32, i32* @SOL_SOCKET, align 4
  %5 = load i32, i32* @SO_OPENTYPE, align 4
  %6 = ptrtoint i32* %1 to i32
  %7 = call i32 @getsockopt(i32 %3, i32 %4, i32 %5, i32 %6, i32* %2)
  %8 = load i32, i32* %1, align 4
  %9 = icmp eq i32 %8, 0
  %10 = zext i1 %9 to i32
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @ok(i32 %10, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i32 %11)
  ret void
}

declare dso_local i32 @getsockopt(i32, i32, i32, i32, i32*) #1

declare dso_local i32 @ok(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
